	* src/racoon/{admin.c|admin_var.h|cfparse.y|debug.h|evt.c|evt.h|
	  grabmyaddr.c|grabmyaddr.h|handler.h|isakmp.c|isakmp_inf.c|
	  isakmp_var.h|localconf.c|localconf.h|main.c|nattraversal.c|
	  pfkey.c|pfkey.h|privsep.c|session.c|session.h}: rewrite
	  local address detection, make some functions static that are
	  not needed global, rework how fd_set is construction for the
	  main loop select()

2008-12-18  Timo Teras  <timo.teras@iki.fi>
	From Arnaud Ebalard <arno@natisbad.org>:
	* src/racoon/pfkey.c: delete larval ph2handles when expire
	  with hard lifetime received

2008-12-16  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/pfkey.c: Fix transport mode address selection
	  in acquire handling (broke on 2008-12-05 commit)
	* README: Update maintainers, links and add links to CVS and trac

2008-12-08  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp.c: Fixed compilation when DPD support is
	  disabled.
	* src/racoon/grabmyaddr.c: Fixed compilation on FreeBSD
	  (RTM_IFINFO and RTM_OIFINFO stuff).

2008-12-08  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/{pfkey.c|privsep.c|privsep.h}: do not cache pfkey
	  sockets for SA dumps: it might cause some notifications to
	  not be handled when select() has triggered pfkey, but timer
	  event calls pfkey_dump_sadb() before reading pfkey socket

2008-12-05  Timo Teras  <timo.teras@iki.fi>
	From Arnaud Ebalard <arno@natisbad.org>:
	* src/libipsec/{key_debug.c|libpfkey.h|pfkey.c}: library functions
	  for SADB_X_EXT_KMADDRESS and updated SADB_X_MIGRATE support
	* src/racoon/{handler.c|handler.h|ipsec_doi.c|isakmp.c|
	  isakmp_quick.c|pfkey.c|policy.c|policy.h}: support Mobile IPv6
	  per draft-ebalard-mext-pfkey-enhanced-migrate (minor fixes to
	  the patch by me)

2008-12-04  Christoph Badura  <bad@netbsd.org>
	* src/racoon/privsep.c: use SIG_IGN to ignore SIGPIPE as I intended
	to.

2008-12-02  Timo Teras  <timo.teras@iki.fi>
	* src/racoon/session.c: Default action for SIGPIPE in Linux is